--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,5 @@
 @import "tailwindcss";
  @plugin "daisyui" {
-  themes: light , dark --prefersdark,cyberpunk,
- autumn --default;
+  themes: light , dark --prefersdark,cyberpunk,synthwave,autumn, --default;
   
  }
